// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`findsertSelfReviewGitignore.integration given: [case1] called multiple times when: [t0] findsert is called multiple times then: only creates once, subsequent calls return unchanged: result-first-call 1`] = `
{
  "action": "created",
  "pathRelative": "$ROUTE/review/self/.gitignore",
}
`;

exports[`findsertSelfReviewGitignore.integration given: [case1] called multiple times when: [t0] findsert is called multiple times then: only creates once, subsequent calls return unchanged: result-second-call 1`] = `
{
  "action": "unchanged",
  "pathRelative": "$ROUTE/review/self/.gitignore",
}
`;

exports[`findsertSelfReviewGitignore.integration given: [case1] called multiple times when: [t0] findsert is called multiple times then: only creates once, subsequent calls return unchanged: result-third-call 1`] = `
{
  "action": "unchanged",
  "pathRelative": "$ROUTE/review/self/.gitignore",
}
`;

exports[`findsertSelfReviewGitignore.integration given: [case2] self-review files in directory when: [t0] findsert is called with self-review files present then: gitignore created alongside self-review files: result-with-files-present 1`] = `
{
  "action": "created",
  "pathRelative": "$ROUTE/review/self/.gitignore",
}
`;

exports[`findsertSelfReviewGitignore.integration given: [case3] route is a file instead of directory when: [t0] findsert is called then: throws ENOTDIR error: error-enotdir-route 1`] = `[Error: ENOTDIR: not a directory, mkdir '/tmp/test-selfreview-gitignore-route-file-int-1776643115355/route-as-file/review/self']`;

exports[`findsertSelfReviewGitignore.integration given: [case4] invalid route path when: [t0] findsert is called with non-writable path then: throws permission error: error-eacces 1`] = `[Error: EACCES: permission denied, mkdir '/nonexistent']`;

exports[`findsertSelfReviewGitignore.integration given: [case5] .gitignore present with incorrect content when: [t0] findsert is called then: overwrites with correct content: result-overwrite 1`] = `
{
  "action": "created",
  "pathRelative": "$ROUTE/review/self/.gitignore",
}
`;

exports[`findsertSelfReviewGitignore.integration given: [case6] .gitignore is a directory when: [t0] findsert is called then: throws EISDIR error: error-eisdir 1`] = `[Error: EISDIR: illegal operation on a directory, read]`;

exports[`findsertSelfReviewGitignore.integration given: [case7] review path is a file instead of directory when: [t0] findsert is called then: throws ENOTDIR error: error-enotdir-review 1`] = `[Error: ENOTDIR: not a directory, mkdir '/tmp/test-selfreview-gitignore-review-file-int-1776643115357/review/self']`;

exports[`findsertSelfReviewGitignore.integration given: [case8] self path is a file instead of directory when: [t0] findsert is called then: throws ENOTDIR error: error-enotdir-self 1`] = `[Error: EEXIST: file already exists, mkdir '/tmp/test-selfreview-gitignore-self-file-int-1776643115358/review/self']`;
